# collatz

./: CMakeLists.txt
include/: ArrowPlotWidget.hxx  arrowplot.hxx  arrowplot.pro  collatz_cube.hxx  collatz_path.hxx
src/: collatz.cpp  collatz.cxx
